# port42

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  LICENSE  P42CLAUDE.md  README.md  RELEASE.md  RELEASES.md  activate.sh  analysis.jso  build.sh  fixed-git-haiku  git-haiku-speaking-in-color  implementation-tracker.md  install-local.sh  install.sh  port42-daemon  port42_notes.json  quick-demo.md  restart.sh  test-bash-approval.sh  test-context-collector.sh  test-context-structures.sh  test-error-handling.md  test-reference.txt  test-watch-mode.sh  test_artifact_async.sh  test_artifact_debug.sh  test_artifact_simple.sh  test_memory_context_integration.sh  test_memory_search.sh  test_model_consistency.sh  test_new_model_config.sh  test_step3_phase_c_enhanced_views.sh  test_step3_phase_d_advanced_discovery.sh  test_unified_hierarchy_specific.sh  web-installer.sh
cli/: Cargo.toml  build.rs  demo-interactive.md  sample_uptime_data.csv  session-continuation-proposal.md  test-input.txt
cli/src/: boot.rs  client.rs  help_handler.rs  help_text.rs  interactive.rs  lib.rs  main.rs  shell.rs  types.rs
cli/src/commands/: cat.rs  daemon.rs  declare.rs  evolve.rs  info.rs  init.rs  list.rs  ls.rs  memory.rs  mod.rs  possess.rs  reality.rs  search.rs  session.rs  status.rs  swim.rs  watch.rs
cli/src/common/: errors.rs  mod.rs  references.rs  utils.rs
cli/src/context/: formatters.rs  mod.rs  safe_tui.rs  watch.rs  watch_tui.rs
cli/src/display/: components.rs  handler.rs  mod.rs
cli/src/possess/: display.rs  mod.rs  session.rs
cli/src/protocol/: file_ops.rs  filesystem.rs  memory.rs  mod.rs  possess.rs  reality.rs  relations.rs  search.rs  status.rs  swim.rs
cli/src/swim/: display.rs  session.rs
cli/src/ui/: mod.rs  (+2 more)
cli/tests/: DEBUG_GUIDE.md  TESTING_GUIDE.md  common_test.rs  debug-test.sh  display_components_test.rs  display_test.rs  manual-test-suite.sh  possess_integration.rs  pre-test-check.sh  protocol_test.rs  run-manual-tests.sh  session_test.rs  simple-test.sh  test-bash-approval.sh  test-interactive.sh  test-vfs-consistency.sh  test-watch-mode.sh  test_error_messages.sh  test_memory_context_possession.rs  test_phase5_status_messages.sh  test_step5_memory_crystallized.sh
(+266 files in other folders)
