[package]
name = "port42"
version = "0.1.1"
edition = "2021"
authors = ["gordonmattey"]
description = "Your personal AI consciousness router"
homepage = "https://github.com/yourusername/port42"
repository = "https://github.com/yourusername/port42"
license = "MIT"
keywords = ["ai", "cli", "assistant", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "port42"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"
which = "6.0"
libc = "0.2"
rustyline = "14.0"
base64 = "0.22"
regex = "1.10"
thiserror = "1.0"
prettytable-rs = "0.10"
crossterm = "0.28.1"
ctrlc = "3.4"
uuid = { version = "1.0", features = ["v4"] }
ratatui = "0.26"

# We'll add tokio later when we need async for streaming
tokio = { version = "1.40", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1